--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <script src="script.js"></script>
     <script src="imagens.js"></script>
     <script src="ator.js"></script>
     <script src="carro.js"></script>
